[gd_scene load_steps=6 format=3 uid="uid://du2tritl8qv7n"]

[ext_resource type="Script" uid="uid://d4htaqfok51h4" path="res://scripts/Characters/inventory_slot.gd" id="1_81ljf"]
[ext_resource type="Texture2D" uid="uid://cknsa5tfsguso" path="res://textures/Creatures/Lich/Skull.png" id="2_pnnjr"]
[ext_resource type="FontFile" uid="uid://vnwga06nhjde" path="res://textures/fonts/Pixelade/PIXELADE.TTF" id="3_oor3x"]
[ext_resource type="FontFile" uid="uid://lqaw1f3c4g5f" path="res://demo/assets/fonts/Permanentmarker-Regular.ttf" id="3_ujur3"]

[sub_resource type="LabelSettings" id="LabelSettings_yy71g"]
font = ExtResource("3_oor3x")
font_size = 22
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.733333)

[node name="InventorySlot" type="Button"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
offset_right = 50.0
offset_bottom = 50.0
script = ExtResource("1_81ljf")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 70.12
offset_bottom = 70.12
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.42, 0.42)
mouse_filter = 2
texture = ExtResource("2_pnnjr")
expand_mode = 1
stretch_mode = 5

[node name="QuantityText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.5
offset_top = -22.5
offset_right = -1.5
offset_bottom = 0.5
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ujur3")
text = "52"
label_settings = SubResource("LabelSettings_yy71g")
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
